@@ -58,6 +58,7 @@
     Edward Rudd & Fixes for playing MP3 versions of MI1/Loom audio\\
     Daniel Schepler & Final MI1 CD music support, initial Ogg Vorbis support\\
     Johannes Schickel & Thumbnails for ScummEngine\\
+    Paul Smedley & OS/2 fixes\\
     Andr\'e Souza & SDL-based OpenGL renderer\\
     Tim ??? & Initial MI1 CD music support\\
   \end{tabular}
